--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 		<script>
 			 function handleSubmit(){
         alert("ffd");
-				fetch("/api/submit", {method: "POST"})
+				fetch("/api/xxxx", {method: "POST"})
 			}
 		</script>
 	</head>
